--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,9 +26,11 @@ dependencies {
     implementation 'com.android.support.constraint:constraint-layout:1.1.2'
 
     implementation 'com.parse:parse-android:1.17.3'
+    implementation 'com.parse:parse-livequery-android:1.0.4'
+
     implementation 'com.squareup.okhttp3:logging-interceptor:3.8.1'
     implementation 'com.github.bumptech.glide:glide:3.8.0'
-    implementation 'com.parse:parse-livequery-android:1.0.4'
+    implementation 'jp.wasabeef:glide-transformations:2.0.2'
 
     implementation 'com.jakewharton:butterknife:8.8.1'
     implementation 'com.android.support:support-v4:27.1.1'
