--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,7 @@
 *.iml
 .gradle
 /local.properties
-/.idea/vcs.xml
-/.idea/misc.xml
-/.idea/libraries
-/.idea/modules.xml
-/.idea/workspace.xml
+/.idea
 .DS_Store
 /build
 /captures
